saves/test/demo_full_20240802_193545/mux256to1/debug_1/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp mux256to1_tb.v mux256to1.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
mux256to1_tb.v:92: $finish called at 100000 (1ps)

iverilog cmd 2 error:

